--- a/.github/workflows/cracker-rdp.yml
+++ b/.github/workflows/cracker-rdp.yml
@@ -1,13 +1,60 @@
-- name: Test background
-  uses: NyaMisty/reverse-rdp-windows-github-actions-ng@master
-  with:
-    ngrok-token: ${{ secrets.NGROK_AUTH_TOKEN }}
-    password: "DKBOTZ" # You can also put the password in secrets as you wish.
-    #foreground: false
+name: DKBOTZ RDP
+
 on:
+  push:
   workflow_dispatch:
-    inputs:
-      debug_enabled:
-        description: 'Run the build with ngrok debugging enabled'
-        required: false
-        default: false
+
+jobs:
+  build:
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-dotnet@v1
+    - name: Download ngrok
+      run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+    - name: Extract ngrok
+      run: Expand-Archive ngrok.zip
+    - name: Authenticate with ngrok
+      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+      env:
+        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+    - name: Enable Remote Desktop
+      run: |
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+        Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
+    - name: TEST
+      timeout-minutes: 1
+      continue-on-error: true
+      run: .\ngrok\ngrok.exe tcp 3389
+    - name: Create ngrok tunnel to remote desktop 2
+      timeout-minutes: 160
+      continue-on-error: true
+      run: .\ngrok\ngrok.exe tcp 3389
+    - name: Create ngrok tunnel to remote desktop 3
+      run: .\ngrok\ngrok.exe tcp 3389
+    - name: Create ngrok tunnel to remote desktop 4
+      timeout-minutes: 40
+      continue-on-error: true
+      run: .\ngrok\ngrok.exe tcp 3389
+    - name: Create ngrok tunnel to remote desktop 5
+      timeout-minutes: 40
+      continue-on-error: true
+      run: .\ngrok\ngrok.exe tcp 3389
+    - name: Create ngrok tunnel to remote desktop 6
+      timeout-minutes: 40
+      continue-on-error: true
+      run: .\ngrok\ngrok.exe tcp 3389
+    - name: Create ngrok tunnel to remote desktop 7
+      timeout-minutes: 40
+      continue-on-error: true
+      run: .\ngrok\ngrok.exe tcp 3389
+    - name: Create ngrok tunnel to remote desktop 8
+      timeout-minutes: 40
+      continue-on-error: true
+      run: .\ngrok\ngrok.exe tcp 3389
+    - name: Create ngrok tunnel to remote desktop 9
+      timeout-minutes: 40
+      continue-on-error: true
+      run: .\ngrok\ngrok.exe tcp 3389
